# CFLRenderAPI

./: .gitignore  CMakeLists.txt  README.md
bin64/: Code2Text.csv
include/: CFLTime.h
include/CFLRender/: CFLPath.h  CFLRender.h  CFLRenderAPI.h  CFLRenderMacros.h  CFLRender_Exports.h  CFLglm.h
src/: CFLTime.cpp  CMakeLists.txt
src/CFLRender/: CFLPath.cpp  CFLRenderAPI.cpp  CFLRender_Enums.h  CFLRender_Fonts.cpp  CFLRender_Fonts.h  CGRender.cpp  CMakeLists.txt
src/CFLRenderGL/: CFLContext.cpp  CFLContext.h  CFLInclude.cpp  CFLInclude.h  CFLInit.cpp  CFLInit.h  CFLMacros.h  CFLRenderGL.cpp  CFLRenderGL.def  CFLRenderGL.h  CFLRenderGLD.def  CGRenderGLD.def  CMakeLists.txt
src/gTestCFLRenderGL/: CMakeLists.txt  gTestEnvironment.cpp  gTestEnvironment.h  gTestInclude.cpp  gTestInclude.h  gTestRenderAPI.cpp
third/freetype-2.13.0/Debug/lib/: freetyped.lib
third/freetype-2.13.0/Debug/lib/pkgconfig/: freetype2.pc
third/freetype-2.13.0/Release/lib/: freetype.lib
third/gTest/Debug/lib/: gtest_main.lib
third/gTest/Debug/lib/cmake/GTest/: GTestTargets.cmake
third/gTest/Release/lib/cmake/GTest/: GTestTargets-release.cmake
third/gTest/Release/lib/pkgconfig/: gtest.pc  gtest_main.pc
third/glfw-3.4/glfw-3.4/lib/Release/pkgconfig/: glfw3.pc
third/glfw-3.4/glfwparent/include/GLFW/: glfw3.h
third/glfw-3.4/lib/Debug/: glfw3.lib
third/glfw-3.4/lib/Release/: glfw3.lib
